# 100DaysRustDevelopment

./: .gitignore  README.md
Week1/guessing_game/: Cargo.toml
Week1/simple_calculator/: Cargo.toml
Week1/temperature_converter/: Cargo.toml
Week1/word_counter/: Cargo.toml  sample_text.txt
Week2/fibonacci_generator/: Cargo.toml
Week2/palindrome_checker/: Cargo.toml
Week2/prime_checker/: Cargo.toml
Week2/todo_cli/: Cargo.toml
Week3/file_reader_cli/: Cargo.toml  sample.txt
Week3/json_parser/: Cargo.toml  sample.json
Week3/memory_management_demo/: Cargo.toml
Week3/rock_paper_scissors/: Cargo.toml
Week3/timer_tool/: Cargo.toml
week10/file_encryption_tool/: Cargo.toml
week10/multi_client_chat_server/: Cargo.toml
week10/process_manager/: Cargo.toml
week10/simple_tcp_server/: Cargo.toml
week11/http_request_parser/: Cargo.toml
week11/mini_ternimal/: Cargo.toml
week11/port_scanner/: Cargo.toml
week11/rest_api_consumer/: Cargo.toml
week11/websocket_echo_server/: Cargo.toml
week12/binary_parser/: Cargo.toml
week12/key_value_store/: Cargo.toml  kv_store.json
week12/mini_editor/: Cargo.toml  test.txt
week12/remote_file_sync_tool/: Cargo.toml
week14/: __azurite_db_queue__.json  __azurite_db_queue_extent__.json
week14/blog_api_backend/: Cargo.toml
week14/blog_api_backend/src/: init.sql  main.rs
week14/e_commerce_backend/: .env  Cargo.toml
week14/e_commerce_backend/src/: main.rs
week14/sqlite_integration_with_actix_web/: Cargo.toml
week14/sqlite_integration_with_actix_web/src/: blog.db  main.rs  posts.sql
(+178 files in other folders)
